# cmake-mytask

./: .gitignore  CMakeLists.txt  CMakePresets.json  readme
data/: case_1_in_a  case_1_in_b  case_1_out
include/: analyze.h
src/: analyze.c  teststor
tests/: test_analyze.c
utils/: analyze-util.c  test-util.c  teststor
